Recreated repository with gitignore to leave out large files that were creating failure to commit. Also added config.py to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Adding files too large to upload and config.py
+movies_metadata.csv
+ratings.csv
+wikipedia-movies.json
+config.py
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
